no bug - Import translations from android-l10n r=release a=l10n CLOSED TREE
UltraBlame original commit: b6516ef76763ea837d5842a3ffbab1ecd126f932

--- a/mobile/android/android-components/components/feature/addons/src/main/res/values-da/strings.xml
+++ b/mobile/android/android-components/components/feature/addons/src/main/res/values-da/strings.xml
@@ -4597,6 +4597,20 @@ name
 "
 mozac_feature_addons_blocklisted_1
 "
+moz
+:
+removedIn
+=
+"
+133
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
 >
 %
 1
@@ -4621,6 +4635,74 @@ stabilitets
 -
 eller
 sikkerhedsproblemer
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Text
+shown
+when
+attempting
+to
+install
+a
+(
+hard
+)
+blocked
+add
+-
+on
+.
+%
+1
+s
+is
+the
+add
+-
+on
+name
+.
+%
+2
+s
+is
+the
+app
+name
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_blocklisted_2
+"
+>
+%
+1
+s
+overtr
+der
+Mozillas
+politikker
+og
+kan
+ikke
+installeres
+i
+%
+2
+s
 .
 <
 /
@@ -4746,6 +4828,20 @@ name
 "
 mozac_feature_addons_soft_blocked
 "
+moz
+:
+removedIn
+=
+"
+133
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
 >
 %
 1
@@ -4758,6 +4854,75 @@ og
 kan
 ikke
 installeres
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Text
+shown
+when
+attempting
+to
+install
+an
+add
+-
+on
+that
+is
+soft
+-
+blocked
+.
+%
+1
+s
+is
+the
+add
+-
+on
+name
+.
+%
+2
+s
+is
+the
+app
+name
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_soft_blocked_1
+"
+>
+%
+1
+s
+overtr
+der
+Mozillas
+politikker
+og
+kan
+ikke
+installeres
+i
+%
+2
+s
 .
 <
 /
@@ -5862,6 +6027,20 @@ name
 "
 mozac_feature_addons_status_blocklisted
 "
+moz
+:
+removedIn
+=
+"
+133
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
 >
 %
 1
@@ -5905,6 +6084,72 @@ add
 on
 has
 been
+blocklisted
+.
+%
+1
+s
+is
+the
+add
+-
+on
+name
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_status_blocklisted_1
+"
+>
+Denne
+udvidelse
+er
+blokeret
+for
+at
+overtr
+de
+Mozillas
+politikker
+og
+er
+blevet
+deaktiveret
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Status
+message
+below
+an
+add
+-
+on
+in
+the
+add
+-
+ons
+manager
+when
+this
+add
+-
+on
+has
+been
 soft
 -
 blocked
@@ -5919,11 +6164,95 @@ name
 "
 mozac_feature_addons_status_softblocked
 "
+moz
+:
+removedIn
+=
+"
+133
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
 >
 Denne
 udvidelse
 overtr
 der
+Mozillas
+politikker
+og
+er
+blevet
+deaktiveret
+.
+Du
+kan
+aktivere
+den
+men
+det
+kan
+v
+re
+risikabelt
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Status
+message
+below
+an
+add
+-
+on
+in
+the
+add
+-
+ons
+manager
+when
+this
+add
+-
+on
+has
+been
+soft
+-
+blocked
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_status_softblocked_1
+"
+>
+Denne
+udvidelse
+er
+begr
+nset
+for
+at
+overtr
+de
 Mozillas
 politikker
 og
