--- a/mobile/android/fenix/app/src/main/res/values-rm/strings.xml
+++ b/mobile/android/fenix/app/src/main/res/values-rm/strings.xml
@@ -3395,6 +3395,48 @@ string
 Browser
 menu
 banner
+header
+text
+for
+extensions
+onboarding
+when
+all
+installed
+extensions
+have
+been
+disabled
+.
+-
+-
+>
+<
+string
+name
+=
+"
+browser_menu_disabled_extensions_banner_onboarding_header
+"
+>
+Ti
+has
+extensiuns
+installadas
+ma
+betg
+activadas
+<
+/
+string
+>
+<
+!
+-
+-
+Browser
+menu
+banner
 body
 text
 for
@@ -3457,6 +3499,80 @@ datas
 e
 la
 segirezza
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Browser
+menu
+banner
+body
+text
+for
+extensions
+onboarding
+when
+all
+installed
+extensions
+have
+been
+disabled
+.
+The
+first
+parameter
+is
+the
+name
+of
+the
+button
+that
+opens
+extension
+manager
+(
+for
+example
+"
+Manage
+extensions
+"
+)
+.
+-
+-
+>
+<
+string
+name
+=
+"
+browser_menu_disabled_extensions_banner_onboarding_body
+"
+>
+Per
+utilisar
+las
+extensiuns
+las
+activescha
+cun
+acceder
+als
+parameters
+u
+cun
+tscherner
+%
+s
+sutvart
 .
 <
 /
@@ -7019,10 +7135,79 @@ name
 "
 search_engine_icon_content_description
 "
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
+moz
+:
+removedIn
+=
+"
+133
+"
 >
 Maschina
 da
 tschertgar
+%
+s
+<
+/
+string
+>
+<
+!
+-
+-
+Content
+description
+(
+not
+visible
+for
+screen
+readers
+etc
+.
+)
+:
+Search
+engine
+icon
+.
+The
+parameter
+is
+the
+search
+engine
+name
+(
+for
+example
+:
+DuckDuckGo
+)
+.
+-
+-
+>
+<
+string
+name
+=
+"
+search_engine_icon_content_description_1
+"
+>
+Maschina
+da
+tschertgar
+:
 %
 s
 <
@@ -8884,13 +9069,6 @@ name
 "
 onboarding_add_on_explore_more_extensions_2
 "
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
 >
 Scuvra
 ulteriuras
@@ -8926,13 +9104,6 @@ name
 =
 "
 onboarding_add_on_start_browsing_button_2
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
 "
 >
 Cumenzar
@@ -9388,6 +9559,168 @@ sin
 apparats
 mobils
 .
+<
+/
+string
+>
+<
+!
+-
+-
+Label
+for
+the
+number
+of
+reviews
+for
+an
+add
+-
+on
+.
+The
+parameter
+is
+for
+the
+formatted
+number
+of
+reviews
+e
+.
+g
+.
+"
+1
+234
+"
+"
+12
+345
+"
+"
+123
+456
+"
+.
+-
+-
+>
+<
+string
+name
+=
+"
+onboarding_add_on_reviews_label
+"
+>
+Recensiuns
+:
+%
+1
+s
+<
+/
+string
+>
+<
+!
+-
+-
+Content
+description
+for
+the
+add
+-
+on
+icon
+.
+-
+-
+>
+<
+string
+name
+=
+"
+onboarding_add_on_icon_content_description
+"
+>
+Icona
+dal
+supplement
+<
+/
+string
+>
+<
+!
+-
+-
+Content
+description
+for
+the
+add
+add
+-
+on
+button
+.
+-
+-
+>
+<
+string
+name
+=
+"
+onboarding_add_on_add_button_content_description
+"
+>
+Buttun
+per
+agiuntar
+in
+supplement
+<
+/
+string
+>
+<
+!
+-
+-
+Content
+description
+for
+the
+star
+rating
+group
+.
+-
+-
+>
+<
+string
+name
+=
+"
+onboarding_add_on_star_rating_content_description
+"
+>
+Valit
+cun
+%
+1
+s
+da
+5
+stailas
 <
 /
 string
@@ -22140,6 +22473,73 @@ bookmark_add_new_folder_button_content_description
 Agiuntar
 in
 nov
+ordinatur
+<
+/
+string
+>
+<
+!
+-
+-
+Content
+description
+for
+the
+bookmark
+screen
+delete
+bookmark
+navigation
+bar
+button
+-
+-
+>
+<
+string
+name
+=
+"
+bookmark_delete_bookmark_content_description
+"
+>
+Stizzar
+il
+segnapagina
+<
+/
+string
+>
+<
+!
+-
+-
+Content
+description
+for
+the
+bookmark
+screen
+delete
+bookmark
+folder
+navigation
+bar
+button
+-
+-
+>
+<
+string
+name
+=
+"
+bookmark_delete_folder_content_description
+"
+>
+Stizzar
+l
 ordinatur
 <
 /
