--- a/mobile/android/fenix/app/src/main/res/values-sq/strings.xml
+++ b/mobile/android/fenix/app/src/main/res/values-sq/strings.xml
@@ -5391,6 +5391,227 @@ string
 !
 -
 -
+Content
+description
+(
+not
+visible
+for
+screen
+readers
+etc
+.
+)
+for
+bottom
+sheet
+handlebar
+main
+menu
+.
+-
+-
+>
+<
+string
+name
+=
+"
+browser_main_menu_handlebar_content_description
+"
+>
+Mbyllni
+flet
+n
+e
+menus
+kryesore
+<
+/
+string
+>
+<
+!
+-
+-
+Content
+description
+(
+not
+visible
+for
+screen
+readers
+etc
+.
+)
+for
+bottom
+sheet
+handlebar
+extensions
+menu
+.
+-
+-
+>
+<
+string
+name
+=
+"
+browser_extensions_menu_handlebar_content_description
+"
+>
+Mbyllni
+flet
+n
+e
+menus
+s
+zgjerimeve
+<
+/
+string
+>
+<
+!
+-
+-
+Content
+description
+(
+not
+visible
+for
+screen
+readers
+etc
+.
+)
+for
+bottom
+sheet
+handlebar
+save
+menu
+.
+-
+-
+>
+<
+string
+name
+=
+"
+browser_save_menu_handlebar_content_description
+"
+>
+Mbyllni
+flet
+n
+e
+menus
+s
+ruajtjeve
+<
+/
+string
+>
+<
+!
+-
+-
+Content
+description
+(
+not
+visible
+for
+screen
+readers
+etc
+.
+)
+for
+bottom
+sheet
+handlebar
+tools
+menu
+.
+-
+-
+>
+<
+string
+name
+=
+"
+browser_tools_menu_handlebar_content_description
+"
+>
+Mbyllni
+flet
+n
+e
+menus
+s
+mjeteve
+<
+/
+string
+>
+<
+!
+-
+-
+Content
+description
+(
+not
+visible
+for
+screen
+readers
+etc
+.
+)
+for
+bottom
+sheet
+handlebar
+custom
+tab
+menu
+.
+-
+-
+>
+<
+string
+name
+=
+"
+browser_custom_tab_menu_handlebar_content_description
+"
+>
+Mbyllni
+flet
+n
+e
+menus
+s
+skedave
+vetjake
+<
+/
+string
+>
+<
+!
+-
+-
 Browser
 menu
 description
@@ -6961,10 +7182,79 @@ name
 "
 search_engine_icon_content_description
 "
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
+moz
+:
+removedIn
+=
+"
+133
+"
 >
 Motor
 k
 rkimesh
+%
+s
+<
+/
+string
+>
+<
+!
+-
+-
+Content
+description
+(
+not
+visible
+for
+screen
+readers
+etc
+.
+)
+:
+Search
+engine
+icon
+.
+The
+parameter
+is
+the
+search
+engine
+name
+(
+for
+example
+:
+DuckDuckGo
+)
+.
+-
+-
+>
+<
+string
+name
+=
+"
+search_engine_icon_content_description_1
+"
+>
+Motor
+k
+rkimesh
+:
 %
 s
 <
@@ -22432,6 +22722,72 @@ nj
 dosje
 t
 re
+<
+/
+string
+>
+<
+!
+-
+-
+Content
+description
+for
+the
+bookmark
+screen
+delete
+bookmark
+navigation
+bar
+button
+-
+-
+>
+<
+string
+name
+=
+"
+bookmark_delete_bookmark_content_description
+"
+>
+Fshije
+faqerojt
+sin
+<
+/
+string
+>
+<
+!
+-
+-
+Content
+description
+for
+the
+bookmark
+screen
+delete
+bookmark
+folder
+navigation
+bar
+button
+-
+-
+>
+<
+string
+name
+=
+"
+bookmark_delete_folder_content_description
+"
+>
+Fshije
+dosjen
 <
 /
 string
