--- a/mobile/android/android-components/components/ui/tabcounter/src/main/res/values-da/strings.xml
+++ b/mobile/android/android-components/components/ui/tabcounter/src/main/res/values-da/strings.xml
@@ -19,6 +19,38 @@ utf
 >
 <
 resources
+xmlns
+:
+tools
+=
+"
+http
+:
+/
+/
+schemas
+.
+android
+.
+com
+/
+tools
+"
+xmlns
+:
+moz
+=
+"
+http
+:
+/
+/
+mozac
+.
+org
+/
+tools
+"
 >
 <
 !
@@ -46,6 +78,20 @@ name
 =
 "
 mozac_tab_counter_open_tab_tray_single
+"
+moz
+:
+removedIn
+=
+"
+133
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
 "
 >
 1
@@ -89,12 +135,81 @@ name
 "
 mozac_tab_counter_open_tab_tray_plural
 "
+moz
+:
+removedIn
+=
+"
+133
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
 >
 %
 1
 s
 bne
 faneblade
+.
+Tryk
+for
+at
+skifte
+faneblade
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Message
+announced
+to
+the
+user
+when
+tab
+tray
+is
+selected
+The
+%
+1
+s
+will
+be
+replaced
+by
+the
+number
+of
+opened
+tabs
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_tab_counter_open_tab_tray
+"
+>
+bne
+faneblade
+:
+%
+1
+s
 .
 Tryk
 for
