--- a/mobile/android/fenix/app/src/main/res/values-es-rCL/strings.xml
+++ b/mobile/android/fenix/app/src/main/res/values-es-rCL/strings.xml
@@ -7159,12 +7159,82 @@ name
 "
 search_engine_icon_content_description
 "
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
+moz
+:
+removedIn
+=
+"
+133
+"
 >
 Motor
 de
 b
 squeda
 de
+%
+s
+<
+/
+string
+>
+<
+!
+-
+-
+Content
+description
+(
+not
+visible
+for
+screen
+readers
+etc
+.
+)
+:
+Search
+engine
+icon
+.
+The
+parameter
+is
+the
+search
+engine
+name
+(
+for
+example
+:
+DuckDuckGo
+)
+.
+-
+-
+>
+<
+string
+name
+=
+"
+search_engine_icon_content_description_1
+"
+>
+Motor
+de
+b
+squeda
+:
 %
 s
 <
@@ -22440,6 +22510,71 @@ A
 adir
 una
 nueva
+carpeta
+<
+/
+string
+>
+<
+!
+-
+-
+Content
+description
+for
+the
+bookmark
+screen
+delete
+bookmark
+navigation
+bar
+button
+-
+-
+>
+<
+string
+name
+=
+"
+bookmark_delete_bookmark_content_description
+"
+>
+Eliminar
+marcador
+<
+/
+string
+>
+<
+!
+-
+-
+Content
+description
+for
+the
+bookmark
+screen
+delete
+bookmark
+folder
+navigation
+bar
+button
+-
+-
+>
+<
+string
+name
+=
+"
+bookmark_delete_folder_content_description
+"
+>
+Eliminar
 carpeta
 <
 /
